--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</figure>
 		
 		<h2>Meu objetivo</h2>
-			<p>Esta imagem representa porque eu estudo engenharia da computação, pretendo criar  soluções sustentáveis para o mundo.</p>
+			<p>Esta imagem representa porque eu estudo engenharia da computação, pretendo criar soluções sustentáveis para o mundo.</p>
 	</article>
 </section>
 
@@ -40,7 +40,7 @@
 	<div>
 		<h2>Questões para refletirmos</h2>
 		<ul type="circle">
-			<li>Você acredito que nós podemos mudar o mundo pra melhor?</li>
+			<li>Você acredita que nós podemos mudar o mundo pra melhor?</li>
 			<li>Quantos anos em média tem o planeta terra?</li>
 			<li>Quantos anos um humano vive em média?</li>
 			<li>Quem sobreviverá aos efeitos ruins que causamos ao planeta?</li>
